# o-dam

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  docker-compose.yml
src/: lib.rs  main.rs  neo.rs  routes.rs
src/config/: mod.rs
src/frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
src/frontend/src/: app.ts
src/graphql/: schema.rs
src/model/: asset.rs  collection.rs  mod.rs  revision.rs  store.rs
src/schema/: schema.rs
src/storage/: fs_adapter.rs  mod.rs  persist.rs
