[package]
name = "o-dam"
version = "0.1.0"
authors = ["Ryan Coleman <me@ryuhhnn.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "odam"

[dependencies]
juniper = "0.15"
juniper_rocket = "0.2.0"
rocket = "0.4.2"
uuid = { version = "0.8", features = ["v4"] }
confy = "0.3.1"
directories = "0.10.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["cypher_pool"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]
